base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mac-m1-test
spec:
  clusterIP: None
  selector:
    app: mac-m1-test
  ports:
  - port: 80
    targetPort: 80
